--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ const-fnv1a-hash = "1.0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4.17"
+rusqlite = {version = "0.27.0", features = ["bundled"] }
+clap = {version = "3.1.18", features = ["derive"] } 
+crossbeam-channel = "0.5.4"
