--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 const-fnv1a-hash = "1.0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-log = "0.4.17"
-rusqlite = {version = "0.27.0", features = ["bundled"] }
+log = {version = "0.4.17", features = ["max_level_off"] }
 clap = {version = "3.1.18", features = ["derive"] } 
 crossbeam-channel = "0.5.4"
+mysql = "22.1.0"
