--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ log = {version = "0.4.17", features = ["max_level_off"] }
 clap = {version = "3.1.18", features = ["derive"] } 
 crossbeam-channel = "0.5.4"
 mysql = "22.1.0"
+bcrypt = "0.13.0"
+jsonwebtoken = "8.1.0"
