--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,3 @@
-# generated file, do not edit manually
-[dependencies]
-bcrypt = "0.13.0"
-const-fnv1a-hash = "1.0.1"
-crossbeam-channel = "0.5.4"
-jsonwebtoken = "8.1.0"
-serde_json = "1.0"
-serde_cbor = "0.10"
-sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "mysql" ] }
-async-std = { version = "1", features = [ "attributes" ] }
 
-[dependencies.clap]
-features = ["derive"]
-version = "3.1.18"
-
-[dependencies.log]
-features = ["max_level_off"]
-version = "0.4.17"
-
-[dependencies.serde]
-features = ["derive"]
-version = "1.0"
-
-[package]
-edition = "2021"
-name = "ecs"
-version = "0.1.0"
+[workspace]
+members = ["ecs", "frontendmmo"]
