--- a/mmolib/Cargo.toml
+++ b/mmolib/Cargo.toml
@@ -10,7 +10,7 @@ bcrypt = "0.13.0"
 const-fnv1a-hash = "1.0.1"
 serde_json = "1.0"
 serde_cbor = "0.11.2"
-
+async-trait = "0.1.56"
 [dependencies.serde]
 features = ["derive"]
 version = "1.0"
