--- a/mmolib/Cargo.toml
+++ b/mmolib/Cargo.toml
@@ -11,6 +11,9 @@ const-fnv1a-hash = "1.0.1"
 serde_json = "1.0"
 serde_cbor = "0.11.2"
 async-trait = "0.1.56"
+rand = "0.8.5"
+bevy_ecs = "0.7.0"
+bevy_reflect = "0.7.0"
 [dependencies.serde]
 features = ["derive"]
 version = "1.0"
