--- a/mmoserv/Cargo.toml
+++ b/mmoserv/Cargo.toml
@@ -4,22 +4,19 @@ const-fnv1a-hash = "1.0.1"
 jsonwebtoken = "8.1.0"
 serde_json = "1.0"
 serde_cbor = "0.11.2"
-sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql" ]}
+sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ]}
 tokio = { version = "1.18.2", features = ["full"] }
 tokio-tungstenite = "*"
 futures = "0.3"
 mmolib = {path = "../mmolib", version = "*"}
 crossbeam-channel = "0.5.4"
-async-trait = "0.1.56"
 bevy_ecs = "0.7.0"
-
+tracing = "*"
+tracing-subscriber = "*"
 [dependencies.clap]
 features = ["derive"]
 version = "3.1.18"
 
-[dependencies.log]
-features = ["max_level_off"]
-version = "0.4.17"
 
 [dependencies.serde]
 features = ["derive"]
